# APIs-for-exam-transcripts

./: .vercelignore  CORS_FIX_GUIDE.md  FINAL_STATUS_REPORT.md  FREE_TIER_RENDER_SOLUTION.md  MIGRATION.md  PRODUCTION_LOGIN_FIX.md  PRODUCTION_USERS_GUIDE.md  README.md  URGENT_FIX_RENDER.md  URGENT_USER_CREATION_FIX.md  USER_JOURNEY.md  render.yaml  todo.todo  vercel.json
backend/: .env.docker  .env.example  .env.production  .env.render  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  README_backend.md  auto_seed_users.py  build.sh  create_production_users.py  create_production_users_simple.py  create_test_users.py  create_users_production.py  docker-compose.yml  fix_production_db.py  migrate_to_uuid.py  nginx.conf  nohup.out  production-checklist.sh  pyproject.toml  requirements.txt  run_tests.sh  seed_users.py  start.sh  test_render_config.py  test_uuid.py  test_uuid_routes.py
backend/app/: __init__.py  main.py  main_backup.py  main_clean.py
backend/app/api/: deps.py
backend/app/api/admin/: migration.py
backend/app/api/auth/: __init__.py  routes.py
backend/app/api/private/: __init__.py  admin.py  supervisor.py  users.py
backend/app/api/public/: __init__.py  exams.py
backend/app/config/: settings.py
backend/app/core/: database.py  exceptions.py  logging.py  permissions.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: exam.py  user.py  user_exam.py
backend/app/repositories/: exam_repository.py  user_repository.py
backend/app/schemas/: auth.py  base.py  exam.py  user.py
backend/app/services/: auth_service.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_auth_api.py  test_auth_endpoints.py  test_health.py
backend/tests/unit/: test_auth_service.py  test_models.py
frontend/: .env.production  .gitignore  DEPLOYMENT.md  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/: AssignVoteModal.tsx  AssignVoteToUserModal.tsx  CreateExamModal.tsx  ErrorBoundary.tsx  LoginForm.tsx  ManageUsersModal.tsx
frontend/src/config/: constants.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: index.ts  useApi.ts
(+10 files in other folders)
