[project]
name = "exam-transcripts-api"
version = "0.1.0"
description = "RESTful API for managing exam transcripts with role-based access control"
authors = [
    { name = "Dieudonne Iyabivuze", email = "116635457+Iyabivuz-e@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.5",
    "bcrypt>=4.3.0",
    "email-validator>=2.3.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
